Adding second recipe- scones

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <H1>Odin Recipes</H1>
-    <a href="recipes/pollo_voldostana.html">Pollo Voldastana</a>
+    <ol>
+        <li><a href="recipes/pollo_voldostana.html">Pollo Voldastana</a></li>
+        <li><a href="recipes/scones.html">Scones, with jam and cream</a></li>
+    </ol>
 </body>
 </html>
