--- a/recipes/scones.html
+++ b/recipes/scones.html
@@ -1,40 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scones recipe</title>
-</head>
-<body>
-    <h1>Scones with Jam and Cream</h1>
-    <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/recipe-image-legacy-id-1001500_10-16f94ee.jpg?quality=90&webp=true&resize=440,400" alt="">
-    <p>Scones with jam and cream</p>
-<h3>Ingrediants</h3>
-<p>
-    <ul>
-        <li>350g self-raising flour, plus more for dusting</li>
-        <li>1tsp baking powder</li>
-        <li>85g of butter, cut into cubes</li>
-        <li>3 tbsp caster sugar</li>
-        <li>15ml milk</li>
-        <li>1 tsp vanilla extract</li>
-        <li>squeexe of lemon juice</li>
-        <li>beaten egg, to glaze</li>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Scones recipe</title>
+    </head>
+    <body>
+        <h1>Scones with Jam and Cream</h1>
+        <img
+            src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/recipe-image-legacy-id-1001500_10-16f94ee.jpg?quality=90&webp=true&resize=440,400"
+            alt>
+        <p>Scones with jam and cream</p>
+        <h3>Ingrediants</h3>
+        <p>
+            <ul>
+                <li>350g self-raising flour, plus more for dusting</li>
+                <li>1tsp baking powder</li>
+                <li>85g of butter, cut into cubes</li>
+                <li>3 tbsp caster sugar</li>
+                <li>15ml milk</li>
+                <li>1 tsp vanilla extract</li>
+                <li>squeexe of lemon juice</li>
+                <li>beaten egg, to glaze</li>
 
-    </ul>
-</p>
-<h3>Steps</h3>
-<p>
-    <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ol>
-
-</p>
-</body>
+            </ul>
+        </p>
+        <h3>Steps</h3>
+        <p>
+            <ol>
+                <li>Heat the oven to 220C/200C fan/gas 7. Tip the self-raising
+                    flour into a large bowl with ¼ tsp salt and the baking
+                    powder, then mix.</li>
+                <li>Add the butter, then rub in with your fingers until the mix
+                    looks like fine crumbs. Stir in the caster sugar.</li>
+                <li>Put the milk into a jug and heat in the microwave for about
+                    30 secs until warm, but not hot. Add the vanilla extract and
+                    a squeeze of lemon juice, then set aside for a moment.</li>
+                <li>Put a baking tray in the oven. Make a well in the dry mix,
+                    then add the liquid and combine it quickly with a cutlery
+                    knife, it will seem pretty wet at first.</li>
+                <li>Scatter some flour onto the work surface and tip the dough
+                    out. Dredge the dough and your hands with a little more
+                    flour, then fold the dough over 2-3 times until it's a
+                    little smoother. Pat into a round about 4cm deep. Take a 5cm
+                    cutter (smooth-edged cutters tend to cut more cleanly,
+                    giving a better rise) and dip it into some flour. Plunge
+                    into the dough, then repeat until you have four scones. You
+                    may need to press what's left of the dough back into a round
+                    to cut out another four.</li>
+                <li>Brush the tops with a beaten egg, then carefully arrange on
+                    the hot baking tray. Bake for 10 mins until risen and golden
+                    on the top. Eat just warm or cold on the day of baking,
+                    generously topped with jam and clotted cream. If freezing,
+                    freeze once cool. Defrost, then put in a low oven (about
+                    160C/140C fan/gas 3) for a few minutes to refresh.</li>
+            </ol>
+        </p>
+    </body>
 </html>
