--- a/recipes/Flapjack.html
+++ b/recipes/Flapjack.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yummy Flapjack</title>
-</head>
-<body>
-    <h1>Scones with Jam and Cream</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Yummy Flapjack</title>
+    </head>
+    <body>
+        <h1>Scones with Jam and Cream</h1>
         <img
             src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/recipe-image-legacy-id-1001500_10-16f94ee.jpg?quality=90&webp=true&resize=440,400"
             alt>
@@ -14,26 +14,26 @@
         <h3>Ingrediants</h3>
         <p>
             <ul>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
+                <li>250g jumbo porridge oats</li>
+                <li>125g butter, plus extra for the tin</li>
+                <li>125g light brown sugar</li>
+                <li>2-3 tbsp golden syrup (depending on how gooey you want
+                    it)</li>
             </ul>
         </p>
         <h3>Steps</h3>
         <p>
             <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Heat the oven to 200C/180C fan/gas 6. Put the oats, butter,
+                    sugar and golden syrup in a food processor and pulse until
+                    mixed, be careful not to overmix or the oats may lose their
+                    texture.</li>
+                <li>Lightly butter a 20 x 20cm baking tin and add the mixture.
+                    Press into the corners with the back of a spoon so the
+                    mixture is flat and score into 12 squares. Bake for around
+                    15 mins until golden brown.</li>
             </ol>
         </p>
-    
-</body>
+
+    </body>
 </html>
