--- a/recipes/scones.html
+++ b/recipes/scones.html
@@ -9,7 +9,7 @@
         <h1>Scones with Jam and Cream</h1>
         <img
             src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/recipe-image-legacy-id-1001500_10-16f94ee.jpg?quality=90&webp=true&resize=440,400"
-            alt>
+            alt="Pictue of scones on a plate">
         <p>Scones with jam and cream</p>
         <h3>Ingrediants</h3>
         <p>
