amended image attribute and image desciption

--- a/recipes/Flapjack.html
+++ b/recipes/Flapjack.html
@@ -6,11 +6,11 @@
         <title>Yummy Flapjack</title>
     </head>
     <body>
-        <h1>Scones with Jam and Cream</h1>
+        <h1>Flapjack</h1>
         <img
             src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/recipe-image-legacy-id-1001500_10-16f94ee.jpg?quality=90&webp=true&resize=440,400"
-            alt="picture of scones on a plate">
-        <p>Scones with jam and cream</p>
+            alt="picture of yummy Flapjack on a plate">
+        <p>Yummy Flapjacks</p>
         <h3>Ingrediants</h3>
         <p>
             <ul>
